packages/jsii/test/negatives/neg.member-named-after-type.ts
export class TypeName {
  public readonly typeName = 1337;
}

export class OtherType {
  public otherType() {
    return;
  }
}

export interface MyStruct {
  readonly myStruct: string;
}
